refactor image builder
